--- a/.github/workflows/ci-app-examples.yml
+++ b/.github/workflows/ci-app-examples.yml
@@ -72,10 +72,12 @@ jobs:
           key: ${{ runner.os }}-pip-py${{ matrix.python-version }}-${{ matrix.pkg-name }}-${{ matrix.requires }}-${{ hashFiles('requirements/app/base.txt') }}
           restore-keys: ${{ runner.os }}-pip-py${{ matrix.python-version }}-${{ matrix.pkg-name }}-${{ matrix.requires }}-
 
-      - name: Install dependencies
+      - name: Install Lightning package & dependencies
+        env:
+          PACKAGE_NAME: ${{ matrix.pkg-name }}
+          FREEZE_REQUIREMENTS: 1
         run: |
-          pip --version
-          pip install -r requirements/app/devel.txt --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+          pip install -e . [dev] --find-links https://download.pytorch.org/whl/cpu/torch_stable.html
           pip list
 
       - name: Setup Node.js
@@ -85,11 +87,6 @@ jobs:
 
       - name: Install Yarn
         run: npm install -g yarn
-
-      - name: Install Lightning package
-        env:
-          PACKAGE_NAME: ${{ matrix.pkg-name }}
-        run: pip install -e .
 
       - name: Adjust tests
         if: ${{ matrix.pkg-name == 'lightning' }}
