--- a/.github/workflows/legacy-checkpoints.yml
+++ b/.github/workflows/legacy-checkpoints.yml
@@ -72,6 +72,7 @@ jobs:
       working-directory: ./
       env:
         PACKAGE_NAME: pytorch
+        FREEZE_REQUIREMENTS: 1
       run: |
         pip install . -f https://download.pytorch.org/whl/cpu/torch_stable.html
         pip list
